--- a/style.css
+++ b/style.css
@@ -1,4 +1,197 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     text-align: center;
     font-size: 40px;
+    margin-bottom: 60px;
 }
+
+
+h1 {
+    font-weight: lighter;
+    font-size: 60px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h5 {
+    font-weight: lighter;
+    font-size: 25px;
+    display: inline-block;
+    white-space: pre-wrap;
+    font-family: sans-serif;
+}
+
+p {
+    font-weight: lighter;
+    padding: 40px;
+    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-around;
+}
+
+.column {
+    float: left;
+    width: 20%;
+    padding: 50px;
+    cursor: pointer;
+}
+
+.column:active {
+    transform: scale(0.8);
+}
+
+.row ::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.trivia {
+    list-style: none;
+}
+
+
+.navbar {
+    overflow: hidden;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.navbar a{
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    width: 20%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.navbar a:hover{
+    background-color: rgb(66, 66, 66);
+}
+
+.header {
+    padding: 20px;
+}
+
+.list {
+    list-style-type: circle;
+    padding-bottom: 50px;
+}
+
+.loginBtn, .registerBtn {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 20px 10%;
+    text-align: center;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    margin: 40px 40px;
+    opacity: 0.8;
+    font-size: 40%;
+}
+
+.loginBtn:hover, .registerBtn:hover {
+    opacity: 1;
+}
+
+.box{
+    width: 400px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: black;
+    text-align: center;
+    height: 520px;
+  }
+
+  .box h1{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 300;
+    padding: 20px;
+  }
+
+  .box input[type = "text"],.box input[type = "password"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #3498db;
+    padding: 14px 10px;
+    width: 200px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+  }
+  .box input[type = "text"]:focus,.box input[type = "password"]:focus{
+    width: 280px;
+    border-color: #2ecc71;
+  }
+  .box input[type = "submit"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+  }
+  .box input[type = "submit"]:hover{
+    background: #2ecc71;
+  }
+
+  #goBackButton {
+      border-radius: 10px;
+      background-color: black;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 40%;
+      opacity: 0.9;
+      cursor: pointer;
+      text-align: center;
+    }
+    
+    #logOutButton{
+        border-radius: 10px;
+        background-color: black;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        font-size: 40%;
+        opacity: 0.9;
+        cursor: pointer;
+        text-align: center;
+        top: 20%;
+        right: 20px;
+        position: absolute;
+  }
+
+  #goBackButton:hover, #logOutButton:hover {
+      opacity: 1;
+  }
