--- a/style.css
+++ b/style.css
@@ -54,6 +54,33 @@ p {
     display: table;
 }
 
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.flex-item {
+    background: red;
+    width: 200px;
+    height: 50px;
+    margin-top: 10px;
+    line-height: 40px;
+    color: white;
+    text-align: center;
+    font-size: 0.5em;
+    cursor: pointer;
+    border: 0.10em solid white;
+    border-radius: 30px;
+    opacity: 0.9;
+    transition: all 0.2s;
+}
+
+.flex-item:hover {
+    opacity: 1;
+    border-color: black;
+}
+
 .trivia {
     list-style: none;
 }
@@ -65,6 +92,7 @@ p {
     position: fixed;
     top: 0;
     width: 100%;
+    left: 0;
 }
 
 .navbar a{
@@ -85,15 +113,32 @@ p {
 
 .header {
     padding: 20px;
+    font-weight: bold;
 }
 
 .list {
     list-style-type: circle;
     padding-bottom: 50px;
+    font-size: 20px;
+    font-weight: lighter;
+    font-family: sans-serif;
+}
+
+#alltrivias {
+    font-size: 25px;
+    font-family: sans-serif;
+}
+
+.text-style {
+    font-size: 20px;
+    font-weight: lighter;
+    font-family: sans-serif;
+    padding-top: 30px;
+    padding-bottom: 20px;
 }
 
 .loginBtn, .registerBtn {
-    background-color: #3498db;
+    background-color: #34db77;
     color: white;
     border: none;
     padding: 20px 10%;
